--- a/Хакатон Вёрстка/main.html
+++ b/Хакатон Вёрстка/main.html
@@ -12,27 +12,62 @@
                 <header class="header">
                     <div class="header__left">
                         <a href="main.html" class="main__page__btn btn active__page">Главная</a>
-                        <a href="vacation__page.html" class="vacation__page__btn btn">Вакансии</a>
-                        <a href="announcements__page.html" class="announcements__page__btn btn">Объявления</a>
-                        <a href="companies__page.html" class="companies__page__btn btn">Компании</a>
+                        <a href="indexes/vacation__page.html" class="vacation__page__btn btn">Вакансии</a>
+                        <a href="indexes/announcements__page.html" class="announcements__page__btn btn">Объявления</a>
+                        <a href="indexes/companies__page.html" class="companies__page__btn btn">Компании</a>
                     </div>
                     <div class="header__right">
                         <!-- <a href="#" class="personal__area-item btn">личный кабинет</a> -->
-                        <a href="personal__area.html"><img src="personal area 3.png" width="100" class="personal__area-picture"></a>
+                        <a href="indexes/personal__area.html"><img src="pictures/personal area 3.png" width="100" class="personal__area-picture"></a>
                     </div>
                 </header>
                 <div class="main">
                     <div class="containers">
-                        <img src="it_tech.gif" width="100%" class="gif__hackaton">
+                        <!-- <img src="pictures/it_tech.gif" width="100%" class="gif__hackaton picture"> -->
+                        <div class="gif__hackaton picture">
+                            <div class="gif__hackaton-text">
+                                <h1>Заголовок</h1>
+                                <span>Краткое описание</span>
+                            </div>
+                        </div>
+                        <div class="announcements__block">
+                            <div class="announcements__block-item">
+                                <a href="#" class="announcements-heading"><span>Веб-дизайн</span></a>
+                                <div class="announcements-info"><span><b>Текст</b></span></div>
+                                <div class="announcements-info"><span>текст с маленькой буквы</span></div>
+                                <div class="announcements-info"><span>Тесто с мясом</span></div>
+                                <div class="announcements-info"><span>тест какая ты феечка винкс</span></div>
+                            </div>
+                            <div class="announcements__block-item">
+                                <a href="#" class="announcements-heading"><span>Веб-программист</span></a>
+                                <div class="announcements-info"><span><b>Best Company of the Century</b></span></div>
+                                <div class="announcements-info"><span>700$/monnth</span></div>
+                                <div class="announcements-info"><span>CSS, HTML, JS, PHP</span></div>
+                                <div class="announcements-info"><span>Опыт от 20 лет разработки</span></div>
+                            </div>
+                            <div class="announcements__block-item">
+                                <a href="#" class="announcements-heading"><span>C</span></a>
+                                <div class="announcements-info"><span>c</span></div>
+                                <div class="announcements-info"><span>c</span></div>
+                                <div class="announcements-info"><span>c</span></div>
+                                <div class="announcements-info"><span>c</span></div>
+                            </div>
+                            <div class="announcements__block-item">
+                                <a href="#" class="announcements-heading"><span>D</span></a>
+                                <div class="announcements-info"><span>d</span></div>
+                                <div class="announcements-info"><span>d</span></div>
+                                <div class="announcements-info"><span>d</span></div>
+                                <div class="announcements-info"><span>d</span></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <footer class="footer">
-                    a
+                    <div class="contacts">
+                        Контакты
+                    </div>
                 </footer>
             </div>
-            <aside class="sidebar__container">
-    
-            </aside>
         </div>
         
     </body>
