--- a/Хакатон Вёрстка/indexes/announcements__page.html
+++ b/Хакатон Вёрстка/indexes/announcements__page.html
@@ -27,7 +27,11 @@
                     </div>
                 </div>
                 <footer class="footer">
-                    a
+                    <div class="footer__blocks">
+                        <div>
+                            <a href="footer__info/contacts.html" class="contacts">Контакты</a>
+                        </div>
+                    </div>
                 </footer>
             </div>
             <aside class="sidebar__container">
