--- a/Хакатон Вёрстка/main.html
+++ b/Хакатон Вёрстка/main.html
@@ -63,8 +63,10 @@
                     </div>
                 </div>
                 <footer class="footer">
-                    <div class="contacts">
-                        Контакты
+                    <div class="footer__blocks">
+                        <div>
+                            <a href="footer__info/contacts.html" class="contacts">Контакты</a>
+                        </div>
                     </div>
                 </footer>
             </div>
