--- a/Хакатон Вёрстка/footer__info/about.html
+++ b/Хакатон Вёрстка/footer__info/about.html
@@ -26,27 +26,11 @@
                 </header>
                 <div class="main">
                     <div class="containers">
-                        <h1 class="heading">Контакты</h1>
-                        <div class="contacts__continers">
-                            <div class="contacts__continers-item1">
-                                <div class="contacts__name"><b>Жук Надежда</b><br><p>Дизайн</p></div>
-                                <div class="contacts-information">
-                                    <div><a href="https://vk.com/nadya_zhuk" class="btn">VK</a></div>
-                                    <div><a href="https://www.instagram.com/1nadyushka1/" class="btn">Instagram</a></div>
-                                </div>
-                            </div>
-                            <div class="contacts__continers-item2">
-                                <div class="contacts__name"><b>Гранов Олег</b><br><p>Back-end <br> Front-end</p></div>
-                                <div class="contacts-information">
-                                    <div><a href="https://vk.com/olehgr" class="btn">VK</a></div>
-                                    <div><a href="https://github.com/0leja" class="btn">GitHub</a></div>
-                                </div>
-                            </div>
-                            <div class="contacts__continers-item3">
-                                <div class="contacts__name"><b>Баландин Богдан</b><br><p>Вёрстка</p></div>
-                                <div class="contacts-information">
-                                    <div><a href="https://vk.com/bogd1ck" class="btn">VK</a></div>
-                                    <div><a href="https://www.instagram.com/asifmcjr/" class="btn">Instagram</a></div>
+                        <div class="about__service">
+                            <span><h1 class="heading">О сервисе</h1></span>
+                            <div class="about__service-information">
+                                <div class="about-text">
+                                    <p>Проект разработан студентами для студентов. Если вы хотите облегчить поиск работы и начать практику в ССУЗе, то предлагаем вам наш сервис. Здесь вы можете создать резюме и подавать заявки в компании партнёров, если вы студент, а также, если вы являетесь партнёром компании, разместить вакансии о поиске рабочих практикантов и удобно выбирать среди поступивших заявок лучших кандидатов.</p>
                                 </div>
                             </div>
                         </div>
@@ -55,8 +39,8 @@
                 <footer class="footer">
                     <div class="footer__blocks">
                         <div>
-                            <a href="contacts.html" class="contacts active__page">Контакты</a>
-                            <a href="about.html" class="about">О сервисе</a>
+                            <a href="contacts.html" class="contacts">Контакты</a>
+                            <a href="about.html" class="about active__page">О сервисе</a>
                         </div>
                     </div>
                 </footer>
