--- a/Хакатон Вёрстка/indexes/companies__page.html
+++ b/Хакатон Вёрстка/indexes/companies__page.html
@@ -3,6 +3,9 @@
     <head>
         <link rel="stylesheet" href="../style.css">
         <title>RKSI Work</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
     </head>
 
@@ -13,7 +16,7 @@
                     <div class="header__left">
                         <a href="../main.html" class="main__page__btn btn">Главная</a>
                         <a href="vacation__page.html" class="vacation__page__btn btn ">Вакансии</a>
-                        <a href="announcements__page.html" class="announcements__page__btn btn">Объявления</a>
+                        <a href="announcements__page.html" class="announcements__page__btn btn">Мероприятия</a>
                         <a href="companies__page.html" class="companies__page__btn btn active__page">Компании</a>
                     </div>
                     <div class="header__right">
@@ -23,20 +26,59 @@
                 </header>
                 <div class="main">
                     <div class="containers">
-                        <a href="#" class="add__vacation-item btn"><span class="add__vacation-ground">Добавить</span></a>
+                        <h1 class="heading">Компании</h1>
+                        <div class="companies__list">
+                            <div class="company">
+                                <div class="company__block">
+                                    <div class="company__heading">ПАО «Ростелеком»</div>
+                                    <span>российский провайдер цифровых услуг и сервисов. Предоставляет услуги широкополосного доступа в Интернет, интерактивного телевидения, сотовой связи, местной и дальней телефонной связи и др.</span>
+                                </div>
+                                <div class="company__contacts">
+                                    <a href="https://rostov.rt.ru/" class="load__more__btn">Перейти</a>
+                                </div>
+                            </div>
+                            <div class="company">
+                                <div class="company__block">
+                                    <div class="company__heading">ПАО КБ «Центр-инвест»</div>
+                                    <span>Банк «Центр-инвест» — крупнейший региональный банк Юга России.</span>
+                                </div>
+                                <div class="company__contacts">
+                                    <a href="https://www.centrinvest.ru/ru/" class="load__more__btn">Перейти</a>
+                                </div>
+                            </div>
+                            <div class="company">
+                                <div class="company__block">
+                                    <div class="company__heading">ПАО «СберБанк»</div>
+                                    <span>ПАО «Сбербанк» — российский финансовый конгломерат, крупнейший универсальный банк России и Восточной Европы.</span>
+                                </div>
+                                <div class="company__contacts">
+                                    <a href="https://www.sberbank.ru/ru/person" class="load__more__btn">Перейти</a>
+                                </div>
+                            </div>
+                            <div class="company">
+                                <div class="company__block">
+                                    <div class="company__heading">ПАО «Мегафон»</div>
+                                    <span>«Мегафон» — российская телекоммуникационная компания, предоставляющая услуги сотовой связи, а также местной телефонной связи, широкополосного доступа в Интернет, кабельного телевидения и ряд сопутствующих услуг.</span>
+                                </div>
+                                <div class="company__contacts">
+                                    <a href="https://rostov.megafon.ru/" class="load__more__btn">Перейти</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="load__more">
+                            <div class="load__more-object"><a href="##" class="load__more__btn">Показать больше</a></div>
+                        </div>
                     </div>
                 </div>
                 <footer class="footer">
                     <div class="footer__blocks">
                         <div>
-                            <a href="footer__info/contacts.html" class="contacts">Контакты</a>
+                            <a href="../footer__info/contacts.html" class="contacts">Контакты</a>
+                            <a href="../footer__info/about.html" class="about">О сервисе</a>
                         </div>
                     </div>
                 </footer>
             </div>
-            <aside class="sidebar__container">
-    
-            </aside>
         </div>
         
     </body>
